# ingo_

./: Project.sh  install_ingo.sh  readme.md  version
.vscode_cmake/: launch.json  tasks.json
.vscode_make/: launch.json  tasks.json
auto/: auto_version.sh
cmake/: CMakeLists.txt  CMakeLists_main.txt  CMakeLists_srs.txt
make/: Makefile
